fix: alignment

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
   left: 0;
   bottom: 0;
   margin-left: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 41px;
 }
 
 
